kubernetes/gateway/app-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-route
  namespace: default
spec:
  parentRefs:
  - name: ingress-gateway
  hostnames:
  - "app.budgetanalyzer.localhost"
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: "https"
    backendRefs:
    - name: nginx-gateway
      port: 8080
