kubernetes/gateway/auth-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: default
spec:
  parentRefs:
  - name: ingress-gateway
  hostnames:
  - "app.budgetanalyzer.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2
    - path:
        type: PathPrefix
        value: /login
    - path:
        type: PathPrefix
        value: /logout
    - path:
        type: PathPrefix
        value: /auth
    - path:
        type: Exact
        value: /user
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: "https"
    backendRefs:
    - name: session-gateway
      port: 8081
